[workspace]
members = ["xtask"]

[package]
name = "engine-testing"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = [
    "derive",
    "cargo",
    "env",
    "unicode",
    "wrap_help",
] }
cranelift = "0.122.0"
cranelift-jit = "0.122.0"
cranelift-module = "0.122.0"
cranelift-native = "0.122.0"
oxc = { version = "0.81.0", features = ["serialize"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "tracing-log",
] }
