[workspace]
members = ["xtask"]

[package]
name = "pawprint"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.bloat]
inherits = "release"
strip = false

[dependencies]
clap = { version = "4.5.43", features = [
    "derive",
    "cargo",
    "env",
    "unicode",
    "wrap_help",
] }
cranelift = "0.122.0"
cranelift-jit = "0.122.0"
cranelift-module = "0.122.0"
cranelift-native = "0.122.0"
miette = { version = "7.6.0", features = ["fancy"] }
oxc_allocator = "0.81.0"
oxc_ast = "0.81.0"
oxc_parser = "0.81.0"
oxc_span = "0.81.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "tracing-log",
] }
